@@ -33,6 +33,7 @@ Pehr Anderson
 Erik Andersén
 Oliver Andrich
 Ross Andrus
+Juancarlo Añez
 Chris Angelico
 Ankur Ankan
 Heidi Annexstad
